* Implemented single chat tab * requires generating unique tabs - Martin